--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -33,12 +33,8 @@
             border: 2px solid $color-primary;
             margin: 1rem 0;
             background-color: rgba($color-tertiary-1, .6);      
-
-            &>a{
             color: $color-primary;
-            text-decoration: none; 
-            padding: 2px 5px;                  
-            }
+            cursor: pointer;
         }
 
     }
