--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,18 +1,16 @@
+html{
+    scroll-behavior: smooth;      
+    font-family: $main-font;
+    font-size: 62.5%;      //1rem= 10px; 10px/16px= 62.5%;
+    box-sizing: border-box;
+}
 *,
 *::after,
 *::before{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
-html{
-    font-family: $main-font;
-    font-size: 62.5%;       //1rem= 10px; 10px/16px= 62.5%;
-}
-body{
-    box-sizing: border-box;
-}
-
 .toggle{
     display: none;
 }
