--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,18 @@
     -webkit-transform: scale(2) rotateZ(360deg);
     transform: scale(2) rotateZ(360deg); } }
 
+html {
+  scroll-behavior: smooth;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 62.5%;
+  box-sizing: border-box; }
+
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
-
-html {
-  font-family: "Titillium Web", sans-serif;
-  font-size: 62.5%; }
-
-body {
-  box-sizing: border-box; }
+  box-sizing: inherit; }
 
 .toggle {
   display: none; }
@@ -128,7 +127,7 @@ body {
   text-align: center; }
   .certificates-list .certificate > img {
     width: 60%;
-    max-width: 640px;
+    max-width: 600px;
     height: auto;
     margin: .5rem auto; }
 
@@ -197,12 +196,11 @@ body {
       .aboutMe__story p:not(:last-child) {
         padding-bottom: 2rem; } }
   .aboutMe__img--profile {
-    height: 10rem;
+    height: 20rem;
     float: left;
     margin-right: 1.5rem;
     border: 4px solid #999;
-    border-radius: 50%;
-    shape-outside: circle(50%); }
+    border-radius: 10%; }
     @media only screen and (min-width: 37.5em) {
       .aboutMe__img--profile {
         height: 24rem; } }
