certificate display changes to slide show

--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -12,4 +12,9 @@
               transform: scale(2) rotateZ(360deg);
     }
   } 
+
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
   
