--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@
     -webkit-transform: scale(2) rotateZ(360deg);
     transform: scale(2) rotateZ(360deg); } }
 
+@keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+
 html {
   scroll-behavior: smooth;
   font-family: "Titillium Web", sans-serif;
@@ -112,24 +118,65 @@ html {
         height: 20rem; } }
 
 .certificate-box {
-  margin-top: 8vh;
-  text-align: center; }
+  margin-top: 5vh;
+  text-align: center;
+  height: 70vh;
+  position: relative; }
   .certificate-box__heading {
-    margin-bottom: 2vh;
     color: #7E31ED;
     text-transform: uppercase;
     font-size: 2rem;
     text-shadow: -1px 1px #999; }
 
 .certificates-list {
-  height: 60vh;
-  overflow: auto;
-  text-align: center; }
-  .certificates-list .certificate > img {
-    width: 60%;
-    max-width: 600px;
-    height: auto;
-    margin: .5rem auto; }
+  max-width: 1000px;
+  margin: auto; }
+  .certificates-list > div {
+    display: none;
+    overflow: auto;
+    align-content: center; }
+  .certificates-list img {
+    width: 100%;
+    min-width: 300px;
+    max-width: 540px;
+    height: auto; }
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  bottom: 5%;
+  width: 2rem;
+  margin-top: -22px;
+  padding: 16px;
+  color: #7E31ED;
+  font-weight: bold;
+  font-size: 2rem;
+  transition: 0.6s ease;
+  border-radius: .3rem;
+  user-select: none;
+  background-color: #f7f7f7; }
+  @media only screen and (min-width: 37.5em) {
+    .prev, .next {
+      bottom: 45%; } }
+
+.prev {
+  left: 30%; }
+  @media only screen and (min-width: 37.5em) {
+    .prev {
+      left: 10%; } }
+
+.next {
+  right: 30%; }
+  @media only screen and (min-width: 37.5em) {
+    .next {
+      right: 10%; } }
+
+.prev:hover, .next:hover {
+  background-color: #999; }
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s; }
 
 .nav {
   position: fixed;
@@ -206,7 +253,7 @@ html {
         height: 24rem; } }
 
 .footer {
-  height: 30vh;
+  height: 25vh;
   font-size: 2rem;
   border-top: 2px solid #777;
   background-color: #7E31ED;
