--- a/sass/components/_certificate.scss
+++ b/sass/components/_certificate.scss
@@ -1,25 +1,69 @@
 .certificate-box{
-    margin-top: 8vh;   
+    margin-top: 5vh;   
     text-align: center;
+    height: 70vh;
+    position: relative;
+
    &__heading{
-        margin-bottom: 2vh;
         color: $color-primary;
         text-transform: uppercase;
         font-size: 2rem;
         text-shadow: -1px 1px $color-grey-dark-2;
    }
 }
-.certificates-list{
-    height: 60vh;
-    overflow: auto;
-    text-align: center;
 
-    & .certificate{
-        &>img{ 
-        width: 60%;
-        max-width: 640px;        
+.certificates-list{
+    max-width: 1000px;    
+    margin: auto;
+
+    &>div{
+        display: none;
+        overflow: auto;
+        align-content: center;
+    }
+
+    & img{
+        width: 100%;
+        min-width: 300px;
+        max-width: 540px;
         height: auto;
-        margin: .5rem auto;
-        }
     }
 }
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    bottom: 5%;
+    width: 2rem;
+    margin-top: -22px;
+    padding: 16px;
+    color: $color-primary;
+    font-weight: bold;
+    font-size: 2rem;
+    transition: 0.6s ease;
+    border-radius: .3rem;
+    user-select: none;
+    background-color: $color-grey-light-1;
+    @include respond(phone){
+        bottom: 45%;    
+    }
+  }
+  .prev{
+    left: 30%;
+    @include respond(phone){       
+        left: 10%;       
+    }
+  }
+  .next {
+    right: 30%;
+    @include respond(phone){        
+        right: 10%;
+    }
+  }
+  .prev:hover, .next:hover {
+    background-color: $color-grey-dark-2;
+  }
+  
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
