--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,26 +18,13 @@
         cursor: pointer;
         transition: all .3s;
         
-        &:active{
-            filter: hue-rotate(45deg);
-        }
         &:hover{
             outline-offset: 8px;
             transform: rotate(2deg);
         }
+        &:active{
+            outline-offset: 2px;
+        }
     }
-    &-contactMe{
-        background-color: $color-grey-light-1;
-        color: $color-primary;
-        cursor: pointer;
-        opacity: 1;
-        width: max-content;
-        margin: 0 auto;
-        
-        &:hover{
-            transform: translateY(-.2rem);
-            opacity: 0.9;
-        }        
-    }    
 }
 
