--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ html {
           font-size: 2rem; } }
   .card > img {
     width: 100%;
+    height: auto;
     opacity: 0.9; }
   .card:hover .card__description {
     height: 10rem;
@@ -330,13 +331,14 @@ html {
       transform: scale(1.2); }
   .footer__copy {
     align-self: center;
+    text-align: center;
     font-size: 1.4rem; }
 
 .portfolio {
   margin: 2rem auto; }
   @media only screen and (min-width: 56.25em) {
     .portfolio {
-      margin: 2rem 2rem; } }
+      margin: 2rem 20rem; } }
   .portfolio__heading {
     font-size: 3rem;
     font-weight: 800;
@@ -355,7 +357,10 @@ html {
 .hero {
   width: 100%;
   height: 100vh;
-  background: #f7f7f7;
+  background-image: linear-gradient(rgba(247, 247, 247, 0.6), rgba(119, 119, 119, 0.9)), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
