--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,10 @@
 .hero{
     width: 100%;
-    height: 100vh;        
-    background: $color-grey-light-1; 
-    //linear-gradient(to right, rgba($color-secondary-light, .5), rgba($color-secondary-dark, .5));
+    height: 100vh;    
+    background-image: linear-gradient(rgba($color-grey-light-1, .6), rgba($color-grey-dark, .9)), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
