--- a/css/style.css
+++ b/css/style.css
@@ -179,26 +179,37 @@ html {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1.4rem; }
+  .nav__logo {
+    display: flex;
+    text-decoration: none; }
   .nav__img {
     height: 5rem;
     width: 4.3rem; }
+  .nav__header {
+    font-size: 2rem;
+    padding-left: 1rem;
+    transform: translateY(-0.5rem);
+    color: #7E31ED;
+    transition: all 1s; }
+    .nav__header h6 {
+      line-height: 1rem; }
   .nav__icon {
     font-size: 3rem;
     color: #7E31ED; }
   .nav-right {
     font-size: 2rem;
-    font-weight: 600;
     width: 130px;
-    border-radius: 5px;
     float: right;
     text-align: center;
-    align-self: auto; }
+    align-self: center; }
     .nav-right > ul > li {
       list-style: none;
-      border: 2px solid #7E31ED;
+      font-weight: 600;
+      border-bottom: 1px solid #d1d1d1;
+      border-radius: 5px;
       margin: 1rem 0;
-      background-color: rgba(233, 226, 208, 0.6);
-      color: #7E31ED;
+      background-color: #333;
+      color: #f7f7f7;
       cursor: pointer; }
 
 .aboutMe {
