--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,11 @@
-$color-primary: #7E31ED;
-$color-primary-light:#a35dff;
+$color-primary:#7E31ED;
+$color-primary-light:rgb(175, 120, 252);
+
+$color-secondary : #233142;
+$color-secondary-light : #3f5b7c;
 
 $color-tertiary-1: #e9e2d0;
-$color-tertiary-2: #ee6553;
+$color-tertiary-2: #ff5959;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d1d1d1;
