--- a/sass/components/_certificate.scss
+++ b/sass/components/_certificate.scss
@@ -1,66 +1,79 @@
 .certificate-box{
-    margin-top: 5vh;   
+    padding-top: 5vh;   
     text-align: center;
-    height: 70vh;
+    height: 80vh;
     position: relative;
+    background-image: linear-gradient(rgba($color-grey-dark, .8), rgba($color-grey-dark-2, .9)), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
    &__heading{
-        color: $color-primary;
+        color: $color-grey-light-1;
         text-transform: uppercase;
-        font-size: 2rem;
-        text-shadow: -1px 1px $color-grey-dark-2;
+        font-size: 2.5rem;
+        padding-bottom: 2rem;
    }
 }
 
 .certificates-list{
-    max-width: 1000px;    
-    margin: auto;
+    height: 100%;
+    width: 100%;
+    margin: auto auto;
 
     &>div{
-        display: none;
-        overflow: auto;
-        align-content: center;
+        transition: all .6s;
+        padding-top: 1rem;
+        @include respond(tab-port){        
+          padding: 1rem;
+      }
     }
 
     & img{
         width: 100%;
-        min-width: 300px;
+        min-width: 290px;
         max-width: 540px;
         height: auto;
+        overflow: auto;
+  
     }
 }
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    bottom: 5%;
+    bottom: 3.5%;
     width: 2rem;
     margin-top: -22px;
-    padding: 16px;
     color: $color-primary;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 4rem;
     transition: 0.6s ease;
     border-radius: .3rem;
     user-select: none;
-    background-color: $color-grey-light-1;
-    @include respond(phone){
-        bottom: 45%;    
-    }
+    text-decoration: none;
+    
+    @include respond(phone){        
+      bottom: 40%;
+  }
   }
   .prev{
     left: 30%;
-    @include respond(phone){       
-        left: 10%;       
-    }
+    @include respond(phone){        
+      left: 5%;
+  }
   }
   .next {
     right: 30%;
     @include respond(phone){        
-        right: 10%;
-    }
+      right: 5%;
   }
-  .prev:hover, .next:hover {
-    background-color: $color-grey-dark-2;
+    
+  }
+  .prev:hover, .next:hover{
+    color: $color-primary-light;
+  }
+  .prev:active, .next:active{
+    transform: scale(.5);
   }
   
   .fade {
