--- a/sass/layout/_aboutme.scss
+++ b/sass/layout/_aboutme.scss
@@ -1,10 +1,10 @@
 .aboutMe{
-    background-color: $color-primary;
+    background-color: $color-secondary;
     color: $color-grey-light-1;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-
+    justify-content: center;
+    align-content: center;
     padding: 2rem 1rem 1rem 1rem;
     height: 100vh;
     min-height: max-content;
@@ -35,6 +35,8 @@
     &__story{
         padding-top: 1.2rem;
         padding-bottom: 2rem;
+        margin-left: 4rem;
+        margin-right: 4rem;
 
         @include respond(phone){
             & div p:not(:last-child){
@@ -60,7 +62,7 @@
     &__img--profile{
         height: 20rem;
         float: left;
-        margin-right: 1.5rem;
+        margin-right: 1.5rem;        
         border: 4px solid $color-grey-dark-2;
         border-radius: 10%;
         
@@ -71,6 +73,7 @@
             width: 350px;
             height: auto;
             margin-right: 8rem;
+            
         }
     }
 
