--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,8 +1,16 @@
 .portfolio{
     margin: 2rem auto;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
     
+    @include respond(phone){
+        margin: 2rem 5rem;
+    }
     @include respond(tab-port){
-        margin: 2rem 20rem;
+        margin: 2rem 10rem;
     }
 
     &__heading{
@@ -16,10 +24,15 @@
      display: grid;
      margin: 2rem auto;
      grid-template-columns: 100%;
-     grid-gap: .3rem;
+     grid-gap: 1rem;
     
-     @include respond(tab-port){
+     @include respond(phone){
          grid-template-columns: 1fr 1fr;
+         grid-gap: 2rem;
+     }
+     @include respond(tab-port){
+         grid-template-columns: 1fr 1fr 1fr;
+         grid-gap: 2.4rem;
      }
     }
 }
