--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    color: $color-primary;    
+    color: $color-secondary;    
     
     &__header{
         display:flex;
@@ -24,50 +24,21 @@
         }
        
     }
-
-    &__social{
-        display: flex;
-        letter-spacing: 10px;
-        font-size: 3.5rem;
-        justify-content: center;
-        align-content: center;
-        margin-top: 10rem;
-        cursor: pointer;
-     
-
-        &--github:hover{
-            color: #111;
-            transform: translateY(-.2rem);
-        }
-        &--linkedin:hover{
-            color: #0077B5;
-            transform: translateY(-.2rem);
-        }
-        &--twitter:hover{
-            color: #1DA1F2;
-            transform: translateY(-.2rem);
-        }
-        &--facebook:hover{
-            color: #4267B2;
-            transform: translateY(-.2rem);
-        }
-    }
 }
 
 .heading-1{
-    font-size: 3.2rem;
+    font-size: 3.5rem;
     opacity: 1;
     text-shadow: 0 2px 0 $color-grey-light-2;    
 }
 .heading-2{
-    font-size: 2.4rem;
-    font-weight: 400;
+    font-size: 2rem;
+    font-weight: 600;
     padding-bottom: 50px;
     text-align: center;
 }
 .heading-3{
-    font-size: 2rem;
+    font-size: 2.4rem;
     font-weight: 600;
-    padding-bottom: 4px;
-    color: $color-primary; 
+    padding-bottom: 4px; 
 }
