--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,5 @@
 .portfolio{
     margin: 2rem auto;
-    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -26,11 +25,11 @@
      grid-template-columns: 100%;
      grid-gap: 1rem;
     
-     @include respond(phone){
+     @include respond(tab-port){
          grid-template-columns: 1fr 1fr;
          grid-gap: 2rem;
      }
-     @include respond(tab-port){
+     @include respond(tab-land){
          grid-template-columns: 1fr 1fr 1fr;
          grid-gap: 2.4rem;
      }
