--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -27,8 +27,11 @@
             color: $color-primary;
             background-color: $color-grey-light-1;
             border-bottom: 1px solid $color-primary-light;
-            @include respond(phone){
-                font-size: 1.5rem;
+            @include respond(tab-port){
+                font-size: 1.7rem;
+            }
+            @include respond(tab-land){
+                font-size: 2.2rem;
             }
 
         }
@@ -37,9 +40,12 @@
             padding: .1rem;          
             font-weight: 700;
             font-size: 2rem;
-            @include respond(phone){
-            font-size: 1.2rem;
-        }
+            @include respond(tab-port){
+            font-size: 1.5rem;
+            }
+            @include respond(tab-land){
+            font-size: 2rem;
+            }
         }
     }
 
