--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,16 +22,16 @@
         transition: height .3s linear, border .1s linear;        
        
         &--head{
-            font-size: 2.2rem;
+            font-size: 1.5rem;
             text-transform: capitalize;
             color: $color-primary;
             background-color: $color-grey-light-1;
             border-bottom: 1px solid $color-primary-light;
-            @include respond(tab-port){
+            @include respond(phone){
                 font-size: 1.7rem;
             }
             @include respond(tab-land){
-                font-size: 2.2rem;
+                font-size: 2rem;
             }
 
         }
@@ -39,12 +39,12 @@
         &--text{
             padding: .1rem;          
             font-weight: 700;
-            font-size: 2rem;
-            @include respond(tab-port){
+            font-size: 1.3rem;
+            @include respond(phone){
             font-size: 1.5rem;
             }
             @include respond(tab-land){
-            font-size: 2rem;
+            font-size: 1.7rem;
             }
         }
     }
