add border top to footer

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     height: 20vh;
     font-size: 2rem;
-    border-top: 2px solid $color-grey-dark;
+    border-top: 5px solid $color-tertiary-2;
     background-color: $color-secondary;
     color: $color-grey-light-1;
 
