--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ html {
 .footer {
   height: 20vh;
   font-size: 2rem;
-  border-top: 2px solid #777;
+  border-top: 5px solid #ff5959;
   background-color: #233142;
   color: #f7f7f7;
   display: flex;
