--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ html {
   opacity: .7;
   font-size: 2.2rem;
   text-transform: capitalize;
-  width: max-content; }
+  width: max-content;
+  cursor: pointer; }
   .btn-header {
     background-color: #ff5959;
     border: none;
@@ -53,7 +54,6 @@ html {
     opacity: 1;
     color: #233142;
     font-weight: 600;
-    cursor: pointer;
     transition: all .3s; }
     .btn-header:hover {
       transform: scale(1.1); }
@@ -76,8 +76,7 @@ html {
   letter-spacing: 10px;
   font-size: 3.5rem;
   justify-content: center;
-  align-content: center;
-  cursor: pointer; }
+  align-content: center; }
   .social--github:hover {
     color: #111;
     transform: translateY(-0.2rem); }
@@ -216,6 +215,57 @@ html {
 .fade {
   animation-name: fade;
   animation-duration: 1.5s; }
+
+.popUp {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(233, 226, 208, 0.8);
+  color: #233142;
+  z-index: 1000; }
+  .popUp__form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    height: 50rem;
+    background-color: #fff;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 2rem;
+    text-align: center; }
+  .popUp__close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #777;
+    font-weight: 800;
+    font-size: 3rem;
+    border-radius: 50%;
+    transform: translate(2rem, -2rem);
+    padding-bottom: .2rem;
+    cursor: pointer; }
+    .popUp__close:hover {
+      transform: translate(2rem, -2rem) scale(1.3);
+      color: #999; }
+
+.form-inputs {
+  width: 98%;
+  line-height: 2.8rem;
+  background-color: #f7f7f7;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #ff5959;
+  color: #777;
+  font-size: 1.8rem;
+  padding: 1rem; }
 
 .nav {
   position: fixed;
