--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -49,8 +49,15 @@
     justify-content: center;
     align-content: center;
     
- 
-
+    & div a {
+        color: inherit;
+        text-decoration: none;
+    }
+    
+    & div a:hover{
+        text-decoration:none; 
+        cursor:pointer;  
+    }
     &--github:hover{
         color: #111;
         transform: translateY(-.2rem);
