--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,26 @@ html {
   font-size: 1.8rem;
   padding: 1rem; }
 
+.thankyou {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  height: 50rem;
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  font-size: 1.5rem;
+  padding: 1.3rem; }
+  .thankyou h2 {
+    margin: 1rem auto; }
+  .thankyou .btn-return {
+    margin: 2rem auto; }
+
 .nav {
   position: fixed;
   z-index: 100;
