--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -17,4 +17,13 @@
     from {opacity: .4} 
     to {opacity: 1}
   }
-  
+ 
+//Prticles
+#particles-js{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 500;
+}
