--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,16 +9,20 @@
     cursor: pointer;
     
     &-header{
-        background-color: $color-tertiary-2;
         border: none;
         margin-bottom: 10rem;
         opacity: 1;
-        color: $color-secondary;
+        color: $color-grey-light-1;
+        background-color: $color-primary;
         font-weight: 600;
         transition: all .3s;
+        outline: 3px solid rgba($color-grey-light-1, .7);
+        outline-offset: .5rem;
         
         &:hover{
-            transform: scale(1.1);
+            //transform: scale(1.1);
+            outline: 3px solid rgba($color-grey-light-1, .9);
+            outline-offset: .1rem;
         }
         &:active{
             transform: scale(0.9);
@@ -48,14 +52,16 @@
     font-size: 3.5rem;
     justify-content: center;
     align-content: center;
-    
+    z-index: 4000;
+        
     & div a {
         color: inherit;
         text-decoration: none;
+        filter: contrast(200%);
     }
     
     & div a:hover{
-        text-decoration:none; 
+        text-decoration:none;
         cursor:pointer;  
     }
     &--github:hover{
