--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero{
     width: 100%;
-    height: 100vh;    
-    background-image: linear-gradient(rgba($color-grey-light-1, .6), rgba($color-grey-dark, .9)), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+    height: 100vh;
+    background-image: linear-gradient(to bottom, rgba($color-grey-light-1, 0.7) 40%,rgba($color-grey-dark, 0.7) 60%), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -9,36 +9,39 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    color: $color-secondary;    
+    color: $color-grey-dark-3;
     
     &__header{
         display:flex;
-        display: flex;
+        height: auto;
         flex-direction: column;
         justify-content: center;
         align-content: center;
-    
+        position: relative;
+        z-index: 1000;
+        margin: 0 auto;
+        filter: contrast(200%);
         &>*{
             justify-self: center;
             align-self: center;
+            
         }
-       
     }
 }
 
 .heading-1{
-    font-size: 3.5rem;
+    font-size: 4rem;
+    font-weight: 600;
     opacity: 1;
-    text-shadow: 0 2px 0 $color-grey-light-2;    
 }
 .heading-2{
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 500;
     padding-bottom: 50px;
     text-align: center;
 }
 .heading-3{
     font-size: 2.4rem;
-    font-weight: 600;
+    font-weight: 500;
     padding-bottom: 4px; 
 }
