--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -15,8 +15,8 @@
     &__heading{
         font-size: 3rem;
         font-weight: 800;
-        color: $color-grey-light-1;
-        background-color: $color-primary-light;
+        color: $color-secondary;
+       // background-color: $color-primary-light;
         text-align: center;
     }
     &__grid{
