--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,9 +3,7 @@
     position: relative;
     color: $color-grey-light-1;
     padding: .3rem;
-    margin: .5rem 2rem;
-    align-self: center;
-    
+    align-self: center;    
 
     @include respond(tab-port){
         margin: 0;
@@ -14,12 +12,13 @@
     &__description{
         background-image: linear-gradient(130deg, rgba($color-primary-light, 0.9) 50%, rgba($color-primary, 1) 90%);        
         position: absolute;
+        left: 0;
         bottom: 0; 
-        width: 100%;
+        width: 100%;        
         height: 0; 
         max-height: min-content;
         overflow: hidden; 
-        transition: height .3s linear, border .1s linear;        
+        transition: height .3s linear, border .1s linear;     
         & a{
             text-decoration: none;
         }
@@ -42,6 +41,7 @@
             padding: .1rem;          
             font-weight: 700;
             font-size: 1.3rem;
+            color: $color-grey-light-1;
             @include respond(phone){
             font-size: 1.5rem;
             }
