color theme changes

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,11 @@
 $color-primary:#7E31ED;
-$color-primary-light:#af78fc;
+$color-primary-light:#974dff;
 
 $color-secondary : #233142;
 $color-secondary-light : #3f5b7c;
 
-$color-tertiary-1: #5fcc89;
-$color-tertiary-2: #ff5959;
+$color-tertiary-1: #e4734f;
+$color-tertiary-2:  #ffe26f;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d1d1d1;
