--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ html {
   display: none; }
 
 body {
-  background-color: rgba(153, 153, 153, 0.8); }
+  background-image: linear-gradient(rgba(63, 91, 124, 0.5), rgba(35, 49, 66, 0.8)); }
 
 .btn {
   padding: 1rem 2rem;
@@ -63,16 +63,17 @@ body {
     margin-bottom: 10rem;
     opacity: 1;
     color: #f7f7f7;
-    background-color: rgba(126, 49, 237, 0.6);
+    background-color: rgba(63, 91, 124, 0.8);
     font-weight: 500;
     transition: all .3s;
     outline: 3px solid rgba(247, 247, 247, 0.7);
     outline-offset: .5rem; }
     .btn-header:hover {
       outline: 3px solid rgba(247, 247, 247, 0.9);
-      outline-offset: .1rem; }
+      outline-offset: .1rem;
+      background-color: #3f5b7c; }
     .btn-header:active {
-      transform: scale(0.9); }
+      transform: scale(0.8); }
   .btn__contactMe {
     color: #233142;
     background-color: #f7f7f7;
@@ -118,14 +119,14 @@ body {
   position: relative;
   color: #f7f7f7;
   padding: .3rem;
-  margin: .5rem 2rem;
   align-self: center; }
   @media only screen and (min-width: 56.25em) {
     .card {
       margin: 0; } }
   .card__description {
-    background-image: linear-gradient(130deg, rgba(175, 120, 252, 0.9) 50%, #7e31ed 90%);
+    background-image: linear-gradient(130deg, rgba(151, 77, 255, 0.9) 50%, #7e31ed 90%);
     position: absolute;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 0;
@@ -139,7 +140,7 @@ body {
       text-transform: capitalize;
       color: #7E31ED;
       background-color: #f7f7f7;
-      border-bottom: 1px solid #af78fc; }
+      border-bottom: 1px solid #974dff; }
       @media only screen and (min-width: 37.5em) {
         .card__description--head {
           font-size: 1.7rem; } }
@@ -149,7 +150,8 @@ body {
     .card__description--text {
       padding: .1rem;
       font-weight: 700;
-      font-size: 1.3rem; }
+      font-size: 1.3rem;
+      color: #f7f7f7; }
       @media only screen and (min-width: 37.5em) {
         .card__description--text {
           font-size: 1.5rem; } }
@@ -162,7 +164,7 @@ body {
     opacity: 0.9; }
   .card:hover .card__description {
     height: 10rem;
-    border: 1px solid #af78fc; }
+    border: 1px solid #974dff; }
     @media only screen and (min-width: 37.5em) {
       .card:hover .card__description {
         font-size: 2rem;
@@ -173,12 +175,12 @@ body {
   text-align: center;
   height: 80vh;
   position: relative;
-  background-image: linear-gradient(rgba(119, 119, 119, 0.8), rgba(153, 153, 153, 0.9)), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+  background-image: linear-gradient(rgba(228, 115, 79, 0.8), rgba(255, 226, 111, 0.9)), url("/resources/sam-erwin-474207-unsplash.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; }
   .certificate-box__heading {
-    color: #f7f7f7;
+    color: #7E31ED;
     text-transform: uppercase;
     font-size: 2.5rem;
     padding-bottom: 2rem; }
@@ -230,7 +232,7 @@ body {
       right: 5%; } }
 
 .prev:hover, .next:hover {
-  color: #af78fc; }
+  color: #974dff; }
 
 .prev:active, .next:active {
   transform: scale(0.5); }
@@ -246,7 +248,7 @@ body {
   left: 0;
   height: 100vh;
   width: 100%;
-  background-color: rgba(95, 204, 137, 0.8);
+  background-color: rgba(228, 115, 79, 0.8);
   color: #233142;
   z-index: 1000; }
   .popUp__form {
@@ -285,7 +287,7 @@ body {
   background-color: #f7f7f7;
   border: none;
   outline: none;
-  border-bottom: 1px solid #ff5959;
+  border-bottom: 1px solid #ffe26f;
   color: #777;
   font-size: 1.8rem;
   padding: 1rem; }
@@ -397,7 +399,7 @@ body {
         .aboutMe__story div {
           padding-right: 5rem; } }
     .aboutMe__story div p span {
-      background-color: rgba(255, 89, 89, 0.5);
+      background-color: rgba(255, 226, 111, 0.5);
       font-weight: 400; }
   @media only screen and (min-width: 75em) {
     .aboutMe__paras {
@@ -426,7 +428,7 @@ body {
     left: 0;
     height: 9vh;
     width: 100%;
-    background-color: #af78fc;
+    background-color: #974dff;
     text-align: center;
     align-self: center;
     padding-top: 1.5rem;
@@ -437,7 +439,6 @@ body {
 .footer {
   height: 20vh;
   font-size: 2rem;
-  border-top: 5px solid #ff5959;
   background-color: #233142;
   color: #f7f7f7;
   display: flex;
@@ -473,7 +474,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-content: center; }
+  align-content: center;
+  box-shadow: 0 0 16px 10px #3f5b7c;
+  border-radius: .2rem; }
   @media only screen and (min-width: 37.5em) {
     .portfolio {
       margin: 2rem 5rem; } }
@@ -483,7 +486,7 @@ body {
   .portfolio__heading {
     font-size: 3rem;
     font-weight: 800;
-    color: #233142;
+    color: #f7f7f7;
     text-align: center; }
   .portfolio__grid {
     display: grid;
@@ -502,7 +505,7 @@ body {
 .hero {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(247, 247, 247, 0.7) 40%, rgba(119, 119, 119, 0.7) 60%), url("https://images.unsplash.com/photo-1508739826987-b79cd8b7da12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80");
+  background-image: radial-gradient(rgba(228, 115, 79, 0.99), rgba(255, 226, 111, 0.85)), url("/resources/sam-erwin-474207-unsplash.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -510,7 +513,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  color: #333; }
+  color: #7E31ED; }
   .hero__header {
     display: flex;
     height: auto;
