--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,5 +15,5 @@ html{
     display: none;
 }
 body{
-    background-color: rgba($color-grey-dark-2, .8);
+    background-image: linear-gradient(rgba($color-secondary-light, 0.5),rgba($color-secondary, 0.8));
 }
