--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -13,19 +13,19 @@
         margin-bottom: 10rem;
         opacity: 1;
         color: $color-grey-light-1;
-        background-color: rgba($color-primary, .6);
+        background-color: rgba($color-secondary-light, .8);
         font-weight: 500;
         transition: all .3s;
         outline: 3px solid rgba($color-grey-light-1, .7);
         outline-offset: .5rem;
         
         &:hover{
-            //transform: scale(1.1);
             outline: 3px solid rgba($color-grey-light-1, .9);
             outline-offset: .1rem;
+            background-color: $color-secondary-light;
         }
         &:active{
-            transform: scale(0.9);
+            transform: scale(0.8);
         }
     }
 
