--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
+    box-shadow: 0 0 16px 10px $color-secondary-light;
+    border-radius: .2rem;
     
     @include respond(phone){
         margin: 2rem 5rem;
@@ -15,7 +17,7 @@
     &__heading{
         font-size: 3rem;
         font-weight: 800;
-        color: $color-secondary;
+        color: $color-grey-light-1;
        // background-color: $color-primary-light;
         text-align: center;
     }
